<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdaugaExamenActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/id">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:id="@+id/ETId">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/denumire_materie">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:id="@+id/ETDenumireMaterie">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nr_studenti">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:id="@+id/ETNrStudenti">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sala">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:id="@+id/ETSala">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/supraveghetor">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:id="@+id/ETSupraveghetor">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/BtnSalveaza"
            android:onClick="salveazaExamen"
            android:text="@string/salveaza">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/BtnRenunta"
            android:onClick="renuntaOperatiune"
            android:text="@string/renunta">
        </Button>
    </LinearLayout>

</LinearLayout>